// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Confirmation Component should render the override justification component with the right props if an override is currently set 1`] = `
<Fragment>
  <h1
    className="jsx-733094270"
  >
    Summary of your application:
  </h1>
  <p
    className="jsx-733094270"
    style={
      Object {
        "fontSize": "1.25rem",
        "fontWeight": 500,
      }
    }
  >
    Please review the information you have provided before continuing.
  </p>
  <br
    className="jsx-733094270"
  />
  <Relay(ApplicationOverrideJustificationComponent)
    applicationDetailsRendered={false}
    applicationOverrideJustification="I did a bad thing and I dont want to fix it"
    hasErrors={false}
    overrideActive={true}
    revisionId="abc"
    setOverrideActive={[Function]}
  />
  <Relay(ApplicationDetailsComponent)
    application={
      Object {
        " $fragmentRefs": Object {
          "ApplicationDetailsContainer_application": true,
          "SubmitApplication_application": true,
        },
        " $refType": "ApplicationWizardConfirmation_application",
        "id": "abc",
        "latestDraftRevision": Object {
          "id": "abc",
          "overrideJustification": "I did a bad thing and I dont want to fix it",
        },
        "orderedFormResults": Object {
          "edges": Array [
            Object {
              "node": Object {
                "formJsonByFormId": Object {
                  "formJson": Object {
                    "schema": Object {
                      "properties": Object {
                        "foo": Object {
                          "type": "string",
                        },
                      },
                      "required": Array [
                        "foo",
                      ],
                      "type": "object",
                    },
                  },
                },
                "formResult": Object {
                  "foo": "bar",
                },
              },
            },
          ],
        },
      }
    }
    liveValidate={true}
    query={
      Object {
        " $fragmentRefs": Object {
          "ApplicationDetailsContainer_query": true,
        },
        " $refType": "ApplicationWizardConfirmation_query",
      }
    }
    review={false}
    setApplicationDetailsRendered={[Function]}
  />
  <br
    className="jsx-733094270"
  />
  <Card
    body={false}
    id="next-step"
  >
    <CardHeader>
      <h2
        className="jsx-733094270"
      >
        Before you submit
      </h2>
    </CardHeader>
    <CardBody>
      By submitting the application the applicant agrees that the information contained on this application, or information contained in emission reports under the Greenhouse Gas Industrial Reporting and Control Act, may be disclosed to British Columbia government employees, contractors and agencies for the purpose of administering the CleanBC Program for Industry or the Greenhouse Gas Industrial Reporting and Control Act.
    </CardBody>
  </Card>
  <br
    className="jsx-733094270"
  />
  <Relay(SubmitApplicationComponent)
    application={
      Object {
        " $fragmentRefs": Object {
          "ApplicationDetailsContainer_application": true,
          "SubmitApplication_application": true,
        },
        " $refType": "ApplicationWizardConfirmation_application",
        "id": "abc",
        "latestDraftRevision": Object {
          "id": "abc",
          "overrideJustification": "I did a bad thing and I dont want to fix it",
        },
        "orderedFormResults": Object {
          "edges": Array [
            Object {
              "node": Object {
                "formJsonByFormId": Object {
                  "formJson": Object {
                    "schema": Object {
                      "properties": Object {
                        "foo": Object {
                          "type": "string",
                        },
                      },
                      "required": Array [
                        "foo",
                      ],
                      "type": "object",
                    },
                  },
                },
                "formResult": Object {
                  "foo": "bar",
                },
              },
            },
          ],
        },
      }
    }
  />
  <JSXStyle
    id="733094270"
  >
    .errors{margin-left:20px;padding:20px;background:#ce5c5c;color:white;font-size:20px;}@media print{.print-hide{display:none !important;}}
  </JSXStyle>
</Fragment>
`;

exports[`The Confirmation Component should render the override justification component with the right props if no override is currently set 1`] = `
<Fragment>
  <h1
    className="jsx-733094270"
  >
    Summary of your application:
  </h1>
  <p
    className="jsx-733094270"
    style={
      Object {
        "fontSize": "1.25rem",
        "fontWeight": 500,
      }
    }
  >
    Please review the information you have provided before continuing.
  </p>
  <br
    className="jsx-733094270"
  />
  <Relay(ApplicationOverrideJustificationComponent)
    applicationDetailsRendered={false}
    applicationOverrideJustification={null}
    hasErrors={false}
    overrideActive={false}
    revisionId="abc"
    setOverrideActive={[Function]}
  />
  <Relay(ApplicationDetailsComponent)
    application={
      Object {
        " $fragmentRefs": Object {
          "ApplicationDetailsContainer_application": true,
          "SubmitApplication_application": true,
        },
        " $refType": "ApplicationWizardConfirmation_application",
        "id": "abc",
        "latestDraftRevision": Object {
          "id": "abc",
          "overrideJustification": null,
        },
        "orderedFormResults": Object {
          "edges": Array [
            Object {
              "node": Object {
                "formJsonByFormId": Object {
                  "formJson": Object {
                    "schema": Object {
                      "properties": Object {
                        "foo": Object {
                          "type": "string",
                        },
                      },
                      "required": Array [
                        "foo",
                      ],
                      "type": "object",
                    },
                  },
                },
                "formResult": Object {
                  "foo": "bar",
                },
              },
            },
          ],
        },
      }
    }
    liveValidate={true}
    query={
      Object {
        " $fragmentRefs": Object {
          "ApplicationDetailsContainer_query": true,
        },
        " $refType": "ApplicationWizardConfirmation_query",
      }
    }
    review={false}
    setApplicationDetailsRendered={[Function]}
  />
  <br
    className="jsx-733094270"
  />
  <Card
    body={false}
    id="next-step"
  >
    <CardHeader>
      <h2
        className="jsx-733094270"
      >
        Before you submit
      </h2>
    </CardHeader>
    <CardBody>
      By submitting the application the applicant agrees that the information contained on this application, or information contained in emission reports under the Greenhouse Gas Industrial Reporting and Control Act, may be disclosed to British Columbia government employees, contractors and agencies for the purpose of administering the CleanBC Program for Industry or the Greenhouse Gas Industrial Reporting and Control Act.
    </CardBody>
  </Card>
  <br
    className="jsx-733094270"
  />
  <Relay(SubmitApplicationComponent)
    application={
      Object {
        " $fragmentRefs": Object {
          "ApplicationDetailsContainer_application": true,
          "SubmitApplication_application": true,
        },
        " $refType": "ApplicationWizardConfirmation_application",
        "id": "abc",
        "latestDraftRevision": Object {
          "id": "abc",
          "overrideJustification": null,
        },
        "orderedFormResults": Object {
          "edges": Array [
            Object {
              "node": Object {
                "formJsonByFormId": Object {
                  "formJson": Object {
                    "schema": Object {
                      "properties": Object {
                        "foo": Object {
                          "type": "string",
                        },
                      },
                      "required": Array [
                        "foo",
                      ],
                      "type": "object",
                    },
                  },
                },
                "formResult": Object {
                  "foo": "bar",
                },
              },
            },
          ],
        },
      }
    }
  />
  <JSXStyle
    id="733094270"
  >
    .errors{margin-left:20px;padding:20px;background:#ce5c5c;color:white;font-size:20px;}@media print{.print-hide{display:none !important;}}
  </JSXStyle>
</Fragment>
`;

exports[`The Confirmation Component shows a message instead of the "submit application" button when there are validation errors 1`] = `
<Fragment>
  <h1
    className="jsx-733094270"
  >
    Summary of your application:
  </h1>
  <p
    className="jsx-733094270"
    style={
      Object {
        "fontSize": "1.25rem",
        "fontWeight": 500,
      }
    }
  >
    Please review the information you have provided before continuing.
  </p>
  <br
    className="jsx-733094270"
  />
  <Relay(ApplicationOverrideJustificationComponent)
    applicationDetailsRendered={false}
    applicationOverrideJustification={null}
    hasErrors={true}
    overrideActive={false}
    revisionId="abc"
    setOverrideActive={[Function]}
  />
  <Relay(ApplicationDetailsComponent)
    application={
      Object {
        " $fragmentRefs": Object {
          "ApplicationDetailsContainer_application": true,
          "SubmitApplication_application": true,
        },
        " $refType": "ApplicationWizardConfirmation_application",
        "id": "abc",
        "latestDraftRevision": Object {
          "id": "abc",
          "overrideJustification": null,
        },
        "orderedFormResults": Object {
          "edges": Array [
            Object {
              "node": Object {
                "formJsonByFormId": Object {
                  "formJson": Object {
                    "schema": Object {
                      "properties": Object {
                        "foo": Object {
                          "type": "string",
                        },
                      },
                      "required": Array [
                        "foo",
                      ],
                      "type": "object",
                    },
                  },
                },
                "formResult": Object {},
              },
            },
          ],
        },
      }
    }
    liveValidate={true}
    query={
      Object {
        " $fragmentRefs": Object {
          "ApplicationDetailsContainer_query": true,
        },
        " $refType": "ApplicationWizardConfirmation_query",
      }
    }
    review={false}
    setApplicationDetailsRendered={[Function]}
  />
  <br
    className="jsx-733094270"
  />
  <div
    className="jsx-733094270 errors"
  >
    Your Application contains errors that must be fixed before submission.
  </div>
  <JSXStyle
    id="733094270"
  >
    .errors{margin-left:20px;padding:20px;background:#ce5c5c;color:white;font-size:20px;}@media print{.print-hide{display:none !important;}}
  </JSXStyle>
</Fragment>
`;

exports[`The Confirmation Component shows the "submit application" button when there is no validation error 1`] = `
<Fragment>
  <h1
    className="jsx-733094270"
  >
    Summary of your application:
  </h1>
  <p
    className="jsx-733094270"
    style={
      Object {
        "fontSize": "1.25rem",
        "fontWeight": 500,
      }
    }
  >
    Please review the information you have provided before continuing.
  </p>
  <br
    className="jsx-733094270"
  />
  <Relay(ApplicationOverrideJustificationComponent)
    applicationDetailsRendered={false}
    applicationOverrideJustification={null}
    hasErrors={false}
    overrideActive={false}
    revisionId="abc"
    setOverrideActive={[Function]}
  />
  <Relay(ApplicationDetailsComponent)
    application={
      Object {
        " $fragmentRefs": Object {
          "ApplicationDetailsContainer_application": true,
          "SubmitApplication_application": true,
        },
        " $refType": "ApplicationWizardConfirmation_application",
        "id": "abc",
        "latestDraftRevision": Object {
          "id": "abc",
          "overrideJustification": null,
        },
        "orderedFormResults": Object {
          "edges": Array [
            Object {
              "node": Object {
                "formJsonByFormId": Object {
                  "formJson": Object {
                    "schema": Object {
                      "properties": Object {
                        "foo": Object {
                          "type": "string",
                        },
                      },
                      "required": Array [
                        "foo",
                      ],
                      "type": "object",
                    },
                  },
                },
                "formResult": Object {
                  "foo": "bar",
                },
              },
            },
          ],
        },
      }
    }
    liveValidate={true}
    query={
      Object {
        " $fragmentRefs": Object {
          "ApplicationDetailsContainer_query": true,
        },
        " $refType": "ApplicationWizardConfirmation_query",
      }
    }
    review={false}
    setApplicationDetailsRendered={[Function]}
  />
  <br
    className="jsx-733094270"
  />
  <Card
    body={false}
    id="next-step"
  >
    <CardHeader>
      <h2
        className="jsx-733094270"
      >
        Before you submit
      </h2>
    </CardHeader>
    <CardBody>
      By submitting the application the applicant agrees that the information contained on this application, or information contained in emission reports under the Greenhouse Gas Industrial Reporting and Control Act, may be disclosed to British Columbia government employees, contractors and agencies for the purpose of administering the CleanBC Program for Industry or the Greenhouse Gas Industrial Reporting and Control Act.
    </CardBody>
  </Card>
  <br
    className="jsx-733094270"
  />
  <Relay(SubmitApplicationComponent)
    application={
      Object {
        " $fragmentRefs": Object {
          "ApplicationDetailsContainer_application": true,
          "SubmitApplication_application": true,
        },
        " $refType": "ApplicationWizardConfirmation_application",
        "id": "abc",
        "latestDraftRevision": Object {
          "id": "abc",
          "overrideJustification": null,
        },
        "orderedFormResults": Object {
          "edges": Array [
            Object {
              "node": Object {
                "formJsonByFormId": Object {
                  "formJson": Object {
                    "schema": Object {
                      "properties": Object {
                        "foo": Object {
                          "type": "string",
                        },
                      },
                      "required": Array [
                        "foo",
                      ],
                      "type": "object",
                    },
                  },
                },
                "formResult": Object {
                  "foo": "bar",
                },
              },
            },
          ],
        },
      }
    }
  />
  <JSXStyle
    id="733094270"
  >
    .errors{margin-left:20px;padding:20px;background:#ce5c5c;color:white;font-size:20px;}@media print{.print-hide{display:none !important;}}
  </JSXStyle>
</Fragment>
`;
